--- a/css/index_style.css
+++ b/css/index_style.css
@@ -7,10 +7,10 @@
 }
 
 .profile-container {
-  margin-left: 41.5vw;
-  width: 50%;
+  text-align: center;
   z-index: 0;
   margin-top: 15vh;
+  margin-bottom: -4vh;
 }
 
 .profile {
@@ -20,37 +20,31 @@
 }
 
 .name-container {
-  margin-left: 5%;
-  width:87%;
+  text-align: center;
   z-index: 0;
-  margin-top: -4vh;
 }
 
 .name-text {
   font-size: 4rem;
   color: white;
-  margin-left: 35.7vw;
   z-index: 0;
 }
 
 .text-change-container {
-  margin-left: 5%;
-  width:87%;
-  height: 50%;
+  text-align: center;
+  z-index: 0;
+  margin-bottom: -4vh;
 }
 
 .coding-language {
   font-size: 3rem;
   color:white;
-  margin-left:17px;
   margin-right: 15px;
-  text-align:middle
 }
 
 .text-changer {
   display: flex;
-  margin-left:36.5vw;
-  justify-content: left;
+  justify-content: center;
   align-items: center;
   margin-top: -12vh;
   z-index: 0;
@@ -88,6 +82,7 @@
   padding-left: 5%;
   padding-right: 5%;
   width: 85%;
+  margin-bottom: 8vh;
   /*alt no margin-left, padding-left: 10%; width: 80% */
 }
 
@@ -105,11 +100,11 @@
 .knowledge-title {
   font-size: 35px;
   color:white;
-  margin-left: 35.7vw;
+  text-align: center;
+  margin-bottom: 2vh;
 }
 
 .knowledge-imgs-container {
-  margin-top: -2vh;
   text-align: center;
 }
 
