--- a/css/base_style.css
+++ b/css/base_style.css
@@ -104,6 +104,7 @@ footer {
   margin-top: 0;
   padding-right: 20px;
   position: fixed;
+  bottom: 0;
   right:0;
   width: 30%;
   text-align: right;
