--- a/css/projects_style.css
+++ b/css/projects_style.css
@@ -1,7 +1,36 @@
 .project-container {
-    margin-left:250px;
-    margin-top: 50px;
-    width: 40vw;
+display: flex;
+margin-top: 20px;
+margin-bottom: 40px;
+}
+
+.column1 {
+flex: 50%;
+margin-left: 7.5%;
+margin-right: 2.5%;
+margin-bottom: 30px;
+text-align: center;
+background-color: gray;
+border-radius: 15px;
+padding-left: 20px;
+padding-right: 20px;
+padding-top: 30px;
+padding-bottom: 30px;
+margin-bottom: 30px;
+}
+
+.column2 {
+flex: 50%;
+margin-left: 2.5%;
+margin-right: 7.5%;
+margin-bottom: 30px;
+text-align: center;
+background-color: gray;
+border-radius: 15px;
+padding-left: 20px;
+padding-right: 20px;
+padding-top: 30px;
+padding-bottom: 30px;
 }
 
 .project-bg {
