--- a/css/projects_style.css
+++ b/css/projects_style.css
@@ -5,7 +5,7 @@ margin-bottom: 40px;
 }
 
 .column1 {
-flex: 50%;
+flex: 33%;
 margin-left: 7.5%;
 margin-right: 2.5%;
 margin-bottom: 30px;
@@ -20,7 +20,21 @@ margin-bottom: 30px;
 }
 
 .column2 {
-flex: 50%;
+flex: 33%;
+margin-left: 2.5%;
+margin-right: 2.5%;
+margin-bottom: 30px;
+text-align: center;
+background-color: gray;
+border-radius: 15px;
+padding-left: 20px;
+padding-right: 20px;
+padding-top: 30px;
+padding-bottom: 30px;
+}
+
+.column3 {
+flex: 33%;
 margin-left: 2.5%;
 margin-right: 7.5%;
 margin-bottom: 30px;
@@ -32,6 +46,7 @@ padding-right: 20px;
 padding-top: 30px;
 padding-bottom: 30px;
 }
+
 
 .project-bg {
     text-align: center;
