--- a/css/index_style.css
+++ b/css/index_style.css
@@ -41,6 +41,7 @@
   color:white;
   margin-right: 15px;
   margin-top: 0;
+  white-space: nowrap;
 }
 
 .text-changer {
@@ -111,3 +112,4 @@
   border-radius: 15px;
   background-color: white;
 }
+
