--- a/css/index_style.css
+++ b/css/index_style.css
@@ -39,6 +39,7 @@
 .coding-language {
   font-size: 3rem;
   color:white;
+  margin-left: 15px;
   margin-right: 15px;
   margin-top: 0;
   white-space: nowrap;
@@ -112,4 +113,5 @@
   border-radius: 15px;
   background-color: white;
 }
+
 
