--- a/css/index_style.css
+++ b/css/index_style.css
@@ -43,6 +43,7 @@
   color:white;
   margin-right: 15px;
   margin-top: 0;
+  white-space: nowrap;
 }
 
 .text-changer {
@@ -57,6 +58,7 @@
   font-size: 3rem;
   color: white;
   margin-top: 0;
+  white-space: nowrap;
 }
 
 .text::after {
