--- a/css/projects_style.css
+++ b/css/projects_style.css
@@ -1,56 +1,59 @@
 .project-container {
-display: flex;
-margin-top: 20px;
-margin-bottom: 40px;
+    display: flex;
+    margin-top: 20px;
+    margin-bottom: 40px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .column1 {
-flex: 33%;
-margin-left: 7.5%;
-margin-right: 2.5%;
-margin-bottom: 30px;
-text-align: center;
-background-color: gray;
-border-radius: 15px;
-padding-left: 20px;
-padding-right: 20px;
-padding-top: 30px;
-padding-bottom: 30px;
-margin-bottom: 30px;
+    flex: 33%;
+    margin-left: 7.5%;
+    margin-right: 2.5%;
+    margin-bottom: 30px;
+    text-align: center;
+    background-color: gray;
+    border-radius: 15px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    margin-bottom: 30px;
 }
 
 .column2 {
-flex: 33%;
-margin-left: 2.5%;
-margin-right: 2.5%;
-margin-bottom: 30px;
-text-align: center;
-background-color: gray;
-border-radius: 15px;
-padding-left: 20px;
-padding-right: 20px;
-padding-top: 30px;
-padding-bottom: 30px;
+    flex: 33%;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+    margin-bottom: 30px;
+    text-align: center;
+    background-color: gray;
+    border-radius: 15px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 .column3 {
-flex: 33%;
-margin-left: 2.5%;
-margin-right: 7.5%;
-margin-bottom: 30px;
-text-align: center;
-background-color: gray;
-border-radius: 15px;
-padding-left: 20px;
-padding-right: 20px;
-padding-top: 30px;
-padding-bottom: 30px;
+    flex: 33%;
+    margin-left: 2.5%;
+    margin-right: 7.5%;
+    margin-bottom: 30px;
+    text-align: center;
+    background-color: gray;
+    border-radius: 15px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 
 .project-bg {
     text-align: center;
     background-color: gray;
+    border-color: 1px solid black;
     border-radius: 15px;
     padding-top: 30px;
     padding-bottom: 30px;
