--- a/css/carousel_style.css
+++ b/css/carousel_style.css
@@ -3,7 +3,7 @@
   margin:0;
 }
 
-.p1mySlides, .p2mySlides, .p3mySlides, .p4mySlides, .p5mySlides, .p6ySlides {
+.mySlides, .p1mySlides, .p2mySlides, .p3mySlides, .p4mySlides, .p5mySlides, .p6ySlides {
   display: none;
 }
 
@@ -36,7 +36,7 @@ img {
 }
 
 .next {
-  right: 5.1%;
+  right: 5%;
   border-radius: 3px 0 0 3px;
 }
 
@@ -44,10 +44,10 @@ img {
   background-color: rgba(0,0,0,0.8);
 }
 
-.p1dot, .p2dot, .p3dot, .p4dot, .p5dot, .p6dot {
+.dot, .p1dot, .p2dot, .p3dot, .p4dot, .p5dot, .p6dot {
   cursor: pointer;
-  height: 15px;
-  width: 15px;
+  height: 10px;
+  width: 10px;
   margin: 0 2px; 
   background-color: #bbb;
   border-radius: 50%;
@@ -55,7 +55,7 @@ img {
   transition: background-color 0.6s ease;
 }
 
-.active, .p1dot:hover, .p2dot:hover, .p3dot:hover, .p4dot:hover, .p5dot:hover, .p6dot:hover {
+.active, .dot:hover, .p1dot:hover, .p2dot:hover, .p3dot:hover, .p4dot:hover, .p5dot:hover, .p6dot:hover {
   background-color: #717171;
 }
 
