--- a/css/projects_style.css
+++ b/css/projects_style.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 .project-container {
     display: flex;
     margin-top: 20px;
@@ -53,7 +57,7 @@
 .project-bg {
     text-align: center;
     background-color: gray;
-    border-color: 1px solid black;
+    border-color: 2px solid black;
     border-radius: 15px;
     padding-top: 30px;
     padding-bottom: 30px;
