--- a/css/index_style.css
+++ b/css/index_style.css
@@ -1,7 +1,7 @@
 .body_bg {
   font-family: "Lato", sans-serif;
   /* background-image: url('../images/nebula.jpg'); */
-  background-image: url('../images/background_pattern.png');
+  background-image: url('../assets/img/background_pattern.png');
   background-size: cover;
   /* background-repeat: no-repeat; */
 }
@@ -9,7 +9,9 @@
 .profile-container {
   text-align: center;
   z-index: 0;
-  margin-top: 15vh;
+  /* With scrolling banner on */
+  margin-top: 12vh;
+  /*margin-top: 15vh;*/
   margin-bottom: -4vh;
 }
 
