--- a/css/projects_style.css
+++ b/css/projects_style.css
@@ -4,31 +4,29 @@ html {
 
 .project-container {
     display: flex;
+    flex-flow: row wrap;
     margin-top: 20px;
     margin-bottom: 40px;
-    margin-left: 10px;
-    margin-right: 10px;
 }
 
 .column1 {
-    flex: 33%;
-    margin-left: 7.5%;
-    margin-right: 2.5%;
-    margin-bottom: 30px;
+    flex: 30%;
     text-align: center;
     background-color: gray;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 30px;
     border-radius: 15px;
     padding-left: 20px;
     padding-right: 20px;
     padding-top: 30px;
     padding-bottom: 30px;
-    margin-bottom: 30px;
 }
 
 .column2 {
-    flex: 33%;
-    margin-left: 2.5%;
-    margin-right: 2.5%;
+    flex: 20%;
+    margin-left: 10px;
+    margin-right: 10px;
     margin-bottom: 30px;
     text-align: center;
     background-color: gray;
@@ -40,9 +38,9 @@ html {
 }
 
 .column3 {
-    flex: 33%;
-    margin-left: 2.5%;
-    margin-right: 7.5%;
+    flex: 20%;
+    margin-left: 10px;
+    margin-right: 10px;
     margin-bottom: 30px;
     text-align: center;
     background-color: gray;
@@ -67,6 +65,7 @@ html {
     border: 2px solid white;
     border-radius: 15px;
     background-color: white;
+    width: 100%;
 }
 
 .project-name {
@@ -77,7 +76,6 @@ html {
 }
 
 .project-desc {
-    margin-left: 5px;
     font-size: 20px;
     color: white;
     text-align: left;
@@ -85,17 +83,9 @@ html {
 }
 
 .features {
-    margin-left: 5px;
     font-size: 20px;
     color: white;
     text-align: left; 
-}
-
-.features-list {
-    margin-left: 45px;
-    font-size: 20px;
-    color:white;
-    text-align: left;
 }
 
 .project-langs {
