--- a/css/base_style.css
+++ b/css/base_style.css
@@ -96,6 +96,7 @@ body {
 footer {
   font-family: "Lato", sans-serif;
   width: 100%;
+  height: auto;
   position: fixed;
   z-index: 0;
   bottom: 0;
@@ -137,4 +138,5 @@ footer {
   vertical-align: middle;
   margin-left: 10px;
   margin-right: 20px;
+
 }
