--- a/css/index_style.css
+++ b/css/index_style.css
@@ -6,6 +6,7 @@
 
 .profile-container {
   text-align: center;
+  max-width: 400px;
   z-index: 0;
   /* With scrolling banner on */
   margin-top: 12vh;
@@ -111,4 +112,5 @@
   border: 2px solid white;
   border-radius: 15px;
   background-color: white;
+
 }
