--- a/css/scrolling_banner_style.css
+++ b/css/scrolling_banner_style.css
@@ -1,4 +1,5 @@
 .scrolling-banner-container {
+    width: auto;
     background-color: #eff5ff;
     border-radius: 4px;
     overflow: hidden;
@@ -40,4 +41,5 @@
     100% {
         transform: translateX(-100%);
     }
+
 }
