--- a/css/scrolling_banner_style.css
+++ b/css/scrolling_banner_style.css
@@ -1,5 +1,5 @@
 .scrolling-banner-container {
-    width: auto;
+    width: 100%;
     background-color: #eff5ff;
     border-radius: 4px;
     overflow: hidden;
@@ -43,3 +43,4 @@
     }
 
 }
+
