--- a/css/base_style.css
+++ b/css/base_style.css
@@ -119,6 +119,7 @@ footer {
   right:0;
   width: 30%;
   text-align: right;
+  overflow: hidden;
 }
 
 .footer-link-start{
@@ -139,3 +140,4 @@ footer {
   margin-right: 20px;
 
 }
+
